# quda_laph

./: CMakeLists.txt  LICENSE  README.md  quda_laph.cc
aux/: README  build_quda.rb  build_quda_laph.rb  indwf.xml  input_perambulators.xml  input_perambulators_A653.xml  input_perambulators_E250.xml  input_perambulators_J250.xml  input_quark_sinks.xml  input_quark_sinks_A653.xml
include/: DWF.h  QudaLaphBlas.h  QudaLaphIncludes.h  array.h  byte_handler.h  data_io_handler.h  dilution_handler.h  dilution_scheme_info.h  dir_path.h  field_ops.h  field_smearing_info.h  filelist_info.h  gauge_configuration_handler.h  gauge_configuration_info.h  gluon_smearing_handler.h  init_quda_laph.h  inverter_info.h  io_fm_handler.h  io_fm_map.h  io_map.h  laph_eigen_info.h  laph_noise.h  laph_noise_info.h  laph_stdio.h  latt_field.h  layout_info.h  multi_compare.h  named_obj_map.h  perambulator_handler.h  quark_action_info.h  quark_handler.h  quark_smearing_handler.h  quda_info.h  read_gauge_field.h  stop_watch.h  tasks.h  utils.h  xml_handler.h
source/: CMakeLists.txt  array.h  byte_handler.cc  byte_handler.h  data_io_handler.h  dilution_handler.cc  dilution_scheme_info.cc  dir_path.h  field_ops.cc  field_ops.h  field_smearing_info.cc  field_smearing_info.h  filelist_info.cc  filelist_info.h  gauge_configuration_handler.cc  gauge_configuration_handler.h  gauge_configuration_info.cc  gauge_configuration_info.h  gluon_smearing_handler.cc  gluon_smearing_handler.h  host_global.h  init_quda_laph.cc  inverter_info.cc  inverter_info.h  io_fm_handler.cc  io_fm_handler.h  io_map.h  laph_eigen_info.cc  laph_eigen_info.h  laph_noise.cc  laph_noise.h  laph_noise_info.cc  laph_noise_info.h  laph_stdio.cc  laph_stdio.h  latt_field.cc  latt_field.h  layout_info.cc  layout_info.h  momenta.cc  (+30 more)
source/Dilution/: CMakeLists.txt  dilution_handler.cc  dilution_scheme_info.cc  laph_eigen_info.cc  laph_noise.cc  laph_noise_info.cc
source/Field/: CMakeLists.txt  field_ops.cc  field_smearing_info.cc  gluon_smearing_handler.cc  latt_field.cc  layout_info.cc
source/IO/: CMakeLists.txt  filelist_info.cc  gauge_configuration_handler.cc  gauge_configuration_info.cc  io_fm_handler.cc  laph_stdio.cc  read_gauge_field.cc  xml_handler.cc
source/Quarks/: CMakeLists.txt  perambulator_handler.cc  quark_action_info.cc  quark_handler.cc  quark_smearing_handler.cc
source/Quda_Interface/: CMakeLists.txt  inverter_info.cc  quda_info.cc
source/tasks/: CMakeLists.txt  task_quark_line_ends.cc  task_quark_perambulators.cc  task_smear_gauge_field.cc  task_smear_quark_field.cc
source/utils/: CMakeLists.txt  byte_handler.cc  stop_watch.cc  utils.cc
testing/: CMakeLists.txt  array.h  byte_handler.cc  byte_handler.h  cern.mpl  checkerboard  checkerboard2.cc  chroma_laph.cc  data_io_handler.h  data_io_handler.h.LAPH  data_io_handler.h.LASTLAPH  data_io_handler.h.prev  dilution_handler.cc  dilution_handler.h  dilution_scheme_info.h  field_obj.cc  field_smearing_info.cc  gauge_configuration_handler.cc  gauge_configuration_info.cc  gauge_configuration_info.h  gluon_smearing_handler.cc  help_Multigrid.txt  help_QudaInvertParam.txt  inline_quark_line_ends.h  inline_smear_quark_field.h  inverter_info.cc  inverter_info.cc.prev  inverter_info.h  io_handler_fm.cc  io_handler_fm.h  io_map.h  laph_data_cmp.cc  laph_eigen_info.cc  laph_eigen_info.h  laph_noise.h  laph_noise_info.cc  laph_noise_info.h  laph_smeared_gauge_cmp.cc  laph_stdio.cc  laph_stdio.h  (+50 more)
tests/: CMakeLists.txt  dummy.xml  test_BatchGEMM.cc  test_ColorContract.cc  test_ColorCross.cc  test_laphBaryonKernel.cc  test_laphBaryonTripletA.cc  test_laphBaryonTripletB.cc  test_laphCurrentKernel.cc  test_noise.cc  test_peram_src.cc  test_rephase.cc
